split-projects/networking-workshop-vpc/main.tf
# Auto-generated Terraform configuration
# Generated by tfstate-to-iac skill

# --- aws_route_table (2) ---

resource "aws_route_table" "rtb_04b00234d3effc208" {
  vpc_id = "vpc-02814c9f8a44aee3d"
}

resource "aws_route_table" "workshop_public_rt" {
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "igw-0fc548dd23a66c623"
  }
  vpc_id = "vpc-02814c9f8a44aee3d"
  tags = {
    "Component" = "network"
    "ManagedBy" = "Terraform"
    "Name" = "workshop-public-rt"
    "Project" = "workshop"
    "do-not-delete" = "true"
  }
}

# --- aws_security_group (2) ---

resource "aws_security_group" "sg_0b575c05f44b7716e" {
  description = "default VPC security group"
  name = "default"
  egress {
    cidr_blocks = [
      "0.0.0.0/0"
    ]
    from_port = 0
    protocol = "-1"
    to_port = 0
  }
  ingress {
    from_port = 0
    protocol = "-1"
    self = true
    to_port = 0
  }
  vpc_id = "vpc-02814c9f8a44aee3d"
}

resource "aws_security_group" "workshop_lambda_sg" {
  description = "Security group for the Lambda function"
  name = "workshop-lambda-sg"
  egress {
    cidr_blocks = [
      "0.0.0.0/0"
    ]
    from_port = 0
    protocol = "-1"
    to_port = 0
  }
  ingress {
    cidr_blocks = [
      "0.0.0.0/0"
    ]
    from_port = 2000
    protocol = "tcp"
    to_port = 2000
  }
  vpc_id = "vpc-02814c9f8a44aee3d"
  tags = {
    "Component" = "application"
    "ManagedBy" = "Terraform"
    "Name" = "workshop-lambda-sg"
    "Project" = "workshop"
    "do-not-delete" = "true"
  }
}

# --- aws_subnet (2) ---

resource "aws_subnet" "workshop_public_subnet_1" {
  availability_zone = "us-west-2a"
  cidr_block = "10.0.1.0/24"
  map_public_ip_on_launch = true
  vpc_id = "vpc-02814c9f8a44aee3d"
  tags = {
    "Component" = "network"
    "ManagedBy" = "Terraform"
    "Name" = "workshop-public-subnet-1"
    "Project" = "workshop"
    "do-not-delete" = "true"
  }
}

resource "aws_subnet" "workshop_public_subnet_2" {
  availability_zone = "us-west-2b"
  cidr_block = "10.0.2.0/24"
  map_public_ip_on_launch = true
  vpc_id = "vpc-02814c9f8a44aee3d"
  tags = {
    "Component" = "network"
    "ManagedBy" = "Terraform"
    "Name" = "workshop-public-subnet-2"
    "Project" = "workshop"
    "do-not-delete" = "true"
  }
}

# --- aws_vpc (1) ---

resource "aws_vpc" "workshop_vpc" {
  cidr_block = "10.0.0.0/16"
  instance_tenancy = "default"
  tags = {
    "Component" = "network"
    "ManagedBy" = "Terraform"
    "Name" = "workshop-vpc"
    "Project" = "workshop"
    "do-not-delete" = "true"
  }
}
